--- a/packages/client/public/index.html
+++ b/packages/client/public/index.html
@@ -34,7 +34,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
     <link href="css/hover-min.css" rel="stylesheet" />
   </head>
-  <body>
+  <body style="zoom:1 i !important">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
