--- a/packages/client/public/index.html
+++ b/packages/client/public/index.html
@@ -5,7 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/logo_favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -29,12 +32,19 @@
       type="text/css"
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://pl.allfont.net/allfont.css?fonts=agency-fb" rel="stylesheet" type="text/css" />
-    <link href="https://pl.allfont.net/allfont.css?fonts=agency-fb-bold" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
+    <link
+      href="https://pl.allfont.net/allfont.css?fonts=agency-fb"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="https://pl.allfont.net/allfont.css?fonts=agency-fb-bold"
+      rel="stylesheet"
+      type="text/css"
+    />
     <link href="css/hover-min.css" rel="stylesheet" />
   </head>
-  <body style="zoom:1 i !important">
+  <body style="zoom: 1 i !important">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
