--- a/packages/client/public/index.html
+++ b/packages/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logo_favicon.svg" />
+    <link rel="icon" href="%PUBLIC_URL%/logo_favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Pyramid</title>
+    <title>Varp</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="//db.onlinewebfonts.com/c/7a7d5578bd2ddba4a33b77d1f90fa994?family=Atari+ST+8x16+System+Font"
