build: :building_construction: remove pyramid project related to varp

--- a/packages/client/public/index.html
+++ b/packages/client/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Pyramid</title>
+    <title>Varp</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="//db.onlinewebfonts.com/c/7a7d5578bd2ddba4a33b77d1f90fa994?family=Atari+ST+8x16+System+Font"
